--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis of International Weightlifting Competitions (in progress)"
+title: 'Analysis of International Weightlifting Competitions (in progress)'
 output: github_document
 ---
 |   The sport of weightlifting has a long history. It was first included in the Olympics in the 1896. Today there are two lifts; the snatch and the clean and jerk. There were originally many lifts, including one and two hand versions. By 1928 there was the snatch, clean and jerk, and the clean and press. In 1972 the press was removed and we're left with the two lifts we have today.  
@@ -7,35 +7,35 @@ output: github_document
 
 Clean and Jerk            |  Snatch
 :-------------------------:|:-------------------------:
-![](./images/ilya.gif)  |  ![](./images/liu.gif)
+![ilya](./images/ilya.gif)  |  ![liu](./images/liu.gif)
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-load("./all_data.Rdata")
+load('./all_data.Rdata')
 ```
 
 ```{r}
 search <- athletes %>% filter(
-  grepl('katherine', name, ignore.case = TRUE) | grepl('martha', name, ignore.case = TRUE),
+  grepl('katherine', name, ignore.case = TRUE) | grepl('martha', name, ignore.case = TRUE) | grepl('alwine', name, ignore.case = TRUE),
   grepl('USA', nations)
   )
-ids = search['athlete_id']
+ids = search$athlete_id
 
 results_sep <- results %>% # a dataset where each best lift/total is another line
-  select(-contains("lift")) %>% 
-  pivot_longer(c("snatch_best", "cleanjerk_best", "total"), names_to = "lift", values_to = "weight") %>% 
-  mutate(lift = str_remove(lift, "_best"))
+  select(-contains('lift')) %>% 
+  pivot_longer(c('snatch_best', 'cleanjerk_best', 'total'), names_to = 'lift', values_to = 'weight') %>% 
+  mutate(lift = str_remove(lift, '_best'))
 
 results_sep %>% 
   filter(
     sapply(athlete_id, function(id) id %in% ids),
     !is.na(weight)) %>% 
-  left_join(events, by = 'event_id') %>% 
-  filter(lift != "total") %>% 
+  left_join(events, by = 'event_id') %>%
   ggplot(aes(x = date, y = weight, color = name)) +
-    geom_line(aes(linetype = lift)) +
-    geom_point()
+    geom_line() +
+    geom_point() +
+    facet_wrap(vars(lift), scales = 'free', ncol = 1) +
+    labs(title = 'comparison')
     
 ```
-
